client/assets/styles/scss/modals/modals-invite.scss
.modal-invite {
  width: 360px;

  .modal-body {
    min-height: 90px; // for spinner
  }

  .list-item {
    overflow: hidden;
    transition: height .15s, padding .15s;

    &.active {
      cursor: auto;
      height: 107px;

      .username {
        margin-top: 9px;
      }

      // not using ng-hide because this element affects layout
      .small {
        opacity: 0;
        pointer-events: none;
      }
    }

    // invite and send buttons
    .green {
      top: 15px;
      width: 50px;
    }

    // close icon
    .icons-close {
      color: $gray-light;
      cursor: pointer;
      pointer-events: auto; // reset from .iconnables
      position: absolute;
      right: 15px;
      top: 15px;

      &:hover {
        color: $red;
      }

      &:active {
        color: $red-dark;
      }
    }

    .username {
      transition: margin-top .15s;
    }

    // email address
    .small {
      transition: opacity .15s;
    }

    .input {
      font-size: 14px;
      margin-left: -6px; // line up send button with invite
      padding-right: 54px;
      width: 306px; // line up send button with invite

      // send
      ~ .green {
        bottom: 13px;
        margin: 6px;
        right: 9px; // line up send button with invite
        top: auto;
      }
    }

    .icons-check {
      color: $green;
    }

    // sending invite
    .spinner-wrapper,
    .send-confirmation {
      position: absolute;
      right: 21px;
      top: 21px;
    }

    // transition for invitation details
    .js-animate {
      transition: opacity .15s;
    }

    .ng-hide {
      opacity: 0;
    }
  }

  // description
  .label {
    margin: 0;

    .small {
      margin: 6px 8px;
    }
  }
}

